# sp_vision_tutorial_26

lecture2/: CMakeLists.txt
lecture2/homework/: fmt_test.cpp  main.cpp  tools.cpp  tools.hpp
lecture3/homework/: main.cpp
lecture3/homework/io/: my_camera.cpp  my_camera.hpp
lecture3/part1/: main.cpp  material
lecture3/part2/: main.cpp  material
lecture4/class/: CMakeCache.txt
lecture4/class/src/: main.cpp
lecture4/homework/io/: CMakeLists.txt
lecture4/homework/src/: main.cpp
lecture4/homework/tasks/: CMakeLists.txt  buff_solver.cpp  buff_solver.hpp
lecture4/homework/tools/: img_tools.hpp
